feat: Update the scripts